reworking the API
