# src/main/java/de/openaqua/fcbackend/controller/QuizzSessionController.java
@@ -1,9 +1,6 @@
 package de.openaqua.fcbackend.controller;
 
-import java.time.OffsetDateTime;
-import java.time.ZoneOffset;
 import java.util.Optional;
-import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -12,28 +9,27 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
-import de.openaqua.fcbackend.api.SessionApi;
-import de.openaqua.fcbackend.model.QuizzSession;
-import de.openaqua.fcbackend.redis.QuizzSessionRedis;
+import de.openaqua.fcbackend.api.QuizzApi;
+import de.openaqua.fcbackend.entities.QuizzSession;
+import de.openaqua.fcbackend.model.IQuizzSession;
 import de.openaqua.fcbackend.redis.RedisRepository;
 import io.swagger.annotations.ApiParam;
 
 @Component
 @RestController
-public class QuizzSessionController implements SessionApi {
+public class QuizzSessionController implements QuizzApi {
 
   @Autowired
-  private RedisRepository repository;
+  private RedisRepository redisRepository;
 
   @Override
-  public ResponseEntity<QuizzSession> getSession() {
-
+  public ResponseEntity<IQuizzSession> getSession() {
     log.info("GET /session/new");
-    QuizzSessionRedis s = new QuizzSessionRedis();
-    s.setId(UUID.randomUUID().toString());
-    s.setCreationTime(OffsetDateTime.now(ZoneOffset.UTC));
-    QuizzSessionRedis a = repository.save(s);
+
+    QuizzSession a = redisRepository.save(new QuizzSession());
     log.info("New Session startet: {}", a.getId());
+
+    // return the session
     return ResponseEntity.ok(a);
   }
 
@@ -41,9 +37,9 @@ public class QuizzSessionController implements SessionApi {
   public ResponseEntity<Void> deleteSession(
       @ApiParam(value = "session String as created by get", required = true) @PathVariable("sessionId") String sessionId) {
     log.info("DELETE /session={}", sessionId);
-    Optional<QuizzSessionRedis> c = repository.findById(sessionId);
+    Optional<QuizzSession> c = redisRepository.findById(sessionId);
     if (c.isPresent()) {
-      repository.delete(c.get());
+      redisRepository.delete(c.get());
       log.info("session finished {}", sessionId);
     } else {
       log.warn("attemp to delete unknown session {}", sessionId);
